@@ -17,6 +17,7 @@ Improvements::
 * reclassify and mark which methods in the converter are private
 * organize methods in converter
 * add DOM traversal methods to simplify the logic in the converter
+* remove requirement to add dummy text to title page to preserve it
 
 Bug Fixes::
 
